--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ script:
 after_success:
   - make docker_build
 deploy:
-  - provider: heroku
-  - app: salty-wave-26251
-  - api_key: ${HEROKU_API_KEY}
+  provider: heroku
+  app: salty-wave-26251
+  api_key: ${HEROKU_API_KEY}
